# properties_scraping

./: .env.example  .gitignore  README.md  pyproject.toml
bawab_patches/: enhanced_search.ts
migrations/: 001_add_ai_search_columns.sql
src/: __init__.py  cli.py  config.py  db_sync.py  server.py
src/images/: __init__.py  analyzer.py  downloader.py
src/scraper/: base.py  dubizzle.py  models.py
