[project]
name = "property-scrapper"
version = "0.1.0"
description = "Egypt property scraper for bawab.app - scrapes listings from dubizzle, bayut, and propertyfinder"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49.0",
    "httpx>=0.28.0",
    "rich>=13.9.0",
    "pillow>=11.0.0",
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "asyncpg>=0.30.0",
    "apscheduler>=3.11.0",
]

[project.scripts]
scrape = "src.cli:main"
